rfclint (0.5.10) distribution(s); urgency=low

	* Add --skip-code and --skip-artwork options to not do spell and duplicate checking on these elements.
	* Preserve all of the whitespace in the source file when emitting the output file
	* Fix an issue where some text was not spell and dup checked (tail of a cref)
	* Add output comment for ABFN and XML checking not occuring because it was not needed

-- Jim Schaad <ietf@augustcellars.com>  Mon 3 Sept 2018 12:00:00 -0700

rfclint (0.5.8) distribution(s); urgency=low

	* Curses and Python 2.7 does not allow for any character above 128.  Remove all characters above that point
	* Expand help on some options

-- Jim Schaad <ietf@augustcellars.com>  Wed 11 July 2018 12:00:00 -0700

rfclint (0.5.8) distribution(s); urgency=low

	* Deal with curses and sections that are too big
	* Center context text when doing spell and duplicate checking
	* Fix bug when no spelling suggestions are present
	* Change undefined symbol errors for ABNF from error to warnings.

-- Jim Schaad <ietf@augustcellars.com>  Mon 9 July 2018 12:00:00 -0700

rfclint (0.5.6) distribution(s); urgency=low

	* Correct code to do checking of XML code fragments

-- Jim Schaad <ietf@augustcellars.com>  Mon 2 July 2018 12:00:00 -0700

rfclint (0.5.5) distribution(s); urgency=low

	* Separate duplicate detection from spell checking
	* Implement interactive duplicate detection both with and without curses
	* Implement interactive spell checking both with and without curses

-- Jim Schaad <ietf@augustcellars.com>  Tue 11 Jan 2018 12:00:00 -0700

rfclint (0.5.3) distribution(s); urgency=low

	* Display platform name when bap is not installed.
	* Correct cache clearing code

-- Jim Schaad <ietf@augustcellars.com>  Thur 26 Apr 2018 12:00:00 -0700

rfclint (0.5.2) distribution(s); urgency=low

	* Add test case for v2 dtd path searching

-- Jim Schaad <ietf@augustcellars.com>  Fri 30 Mar 2018 12:00:00 -0700

rfclint (0.5.1) distribution(s); urgency=low
