@@ -1,7 +1,9 @@
-WARNING: ; S UNDEFINED
-WARNING: ; id UNDEFINED
-WARNING: ; value UNDEFINED
-WARNING: ; uint UNDEFINED
-WARNING: ; DIGIT UNDEFINED
-WARNING: ; occur UNDEFINED
-WARNING: ; optcom UNDEFINED
+INFO: Schema validation passes
+INFO: ; S UNDEFINED
+INFO: ; id UNDEFINED
+INFO: ; value UNDEFINED
+INFO: ; uint UNDEFINED
+INFO: ; DIGIT UNDEFINED
+INFO: ; occur UNDEFINED
+INFO: ; optcom UNDEFINED
+INFO: ABNF checked with no errors
