@@ -1,2 +1,3 @@
+INFO: Schema validation passes
 ERROR: Skipping ABNF checking because
   The program 'no-abnf' does not exist or is not executable
