@@ -1,1 +1,2 @@
-WARNING: No ABNF to check
+INFO: Schema validation passes
+INFO: No ABNF to check
