@@ -1,3 +1,9 @@
+rfctools-common (0.5.11) distribution(s); urgency=low
+
+	* Add the info logging function for another output type
+
+-- Jim Schaad <ietf@augustcellars.com>  Wed 19 Dec 2018 12:00:00 -0700
+
 rfctools-common (0.5.10) distribution(s); urgency=low
 
 	* The no xinclude option is expanded to include processing <?rfc include=""?> PI
